Fixed Text align

--- a/style.css
+++ b/style.css
@@ -11,10 +11,20 @@ body {
     color: black;
 }
 
-.name {
+.container {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+}
+
+.name {
+    /* display: flex; */
+    /* align-items: center;
+    justify-content: center;
+    flex-wrap: wrap; */
+    text-align: center;
     margin-top: 10rem;
     margin-bottom: 3rem;
     font-size: xxx-large;
